--- a/test.html
+++ b/test.html
@@ -4,44 +4,104 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tenant Directory — Global Infocity</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; }
-    @keyframes rowAnim {
-      to {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-      }
+    :root {
+      --accent: #ff6600;
+      --muted: #6b7280;
+      --bg: #ffffff;
+      --divider: rgba(0,0,0,0.1);
     }
-    .row-anim {
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; width: 100%; }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: var(--bg);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+    .directory {
+      width: 90vw;
+      height: 95vh;
+      max-width: 900px;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+    .header {
+      text-align: center;
+      padding: 1vh 0;
+      flex-shrink: 0;
+    }
+    .header h1 { color: var(--accent); font-weight: 800; margin: 0; }
+    .header h2 { font-weight: 600; margin: 0; }
+    .list {
+      display: flex;
+      flex-direction: column-reverse;
+      border-top: 1px solid var(--divider);
+      flex: 1;
+      overflow: hidden;
+    }
+    .row {
+      display: grid;
+      grid-template-columns: 12vw 1.5vw auto; /* floor | divider | logos */
+      align-items: center;
+      border-bottom: 1px solid var(--divider);
       opacity: 0;
-      transform: translateY(40px) scale(0.95);
+      transform: translateY(4vh) scale(0.5);
       animation: rowAnim 0.6s forwards;
+      padding: 0 1vw;
+      gap: 0.5vw;
+    }
+    .divider-vertical {
+      width: 2px;
+      height: 70%; /* will scale dynamically in JS */
+      justify-self: center;
+      background: linear-gradient(to bottom, transparent, var(--divider), transparent);
+    }
+    .floor {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .logo {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 0.5vh;
+      width: 100%;
+    }
+    .logo img {
+      border-radius: 12px;
+      object-fit: contain;
+      background: #f9f9f9;
+      padding: 6px;
+      flex-shrink: 0;
+    }
+    @keyframes rowAnim {
+      to { opacity: 1; transform: translateY(0) scale(1); }
     }
   </style>
 </head>
-<body class="bg-gray-50 w-screen h-screen overflow-hidden flex justify-center items-center">
-
-  <div class="w-full h-full max-w-full sm:max-w-5xl bg-white rounded-none sm:rounded-2xl shadow-xl flex flex-col">
-    <!-- Header -->
-    <div class="text-center px-4 sm:px-6 py-4 sm:py-6 border-b border-gray-200 flex-shrink-0">
-      <h1 class="text-2xl sm:text-3xl lg:text-4xl font-extrabold text-orange-600">Global Infocity Park</h1>
-      <h2 class="text-xl sm:text-2xl lg:text-3xl font-semibold text-gray-800 mt-1 sm:mt-2">Block A</h2>
+<body>
+  <div class="directory">
+    <div class="header">
+      <h1>Global Infocity Park</h1>
+      <h2>Block A</h2>
     </div>
-
-    <!-- Directory list -->
-    <div id="directoryView" 
-         class="flex flex-col-reverse border-t border-gray-200 flex-1 overflow-hidden p-2 sm:p-4 lg:p-6">
-      <!-- Floors will load dynamically -->
-    </div>
+    <div class="list" id="directoryView"></div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCrGIB_YK33p_2EPTpU-klZ_3xQ5TOPm4c",
       authDomain: "adora-ad.firebaseapp.com",
@@ -55,59 +115,77 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
     const floorsRef = ref(db, "blocks/A/floors");
-
     const listContainer = document.getElementById("directoryView");
 
     onValue(floorsRef, snapshot => {
       const data = snapshot.val();
       listContainer.innerHTML = "";
-
       if (!data) return;
 
-      const floorKeys = Object.keys(data).sort((a, b) => a - b);
+      // Sort floors: GF first, then numbers ascending
+      const floorKeys = Object.keys(data).sort((a,b)=>{
+        if(a === "GF") return -1;
+        if(b === "GF") return 1;
+        return parseInt(a) - parseInt(b);
+      });
+
+      const numFloors = floorKeys.length;
+      const directoryHeight = document.querySelector('.directory').clientHeight;
+      const headerHeight = document.querySelector('.header').clientHeight;
+      const rowHeight = (directoryHeight - headerHeight) / numFloors;
 
       floorKeys.forEach((floor, i) => {
         const tenants = data[floor]?.tenants;
         if (!tenants) return;
 
-        // Row with same view logic
         const row = document.createElement("div");
-        row.className = `
-          grid grid-cols-[80px_1px_auto] items-center
-          px-2 sm:px-4 lg:px-6 py-3 sm:py-4 lg:py-6 border-b border-gray-200
-          row-anim
-        `;
-        row.style.animationDelay = `${(i + 1) * 0.1}s`;
+        row.className = "row";
+        row.style.height = `${rowHeight}px`;
+        row.style.animationDelay = `${(i+1)*0.1}s`;
 
-        // Floor label
+        // Floor Button Container
         const floorDiv = document.createElement("div");
-        floorDiv.className = "text-sm sm:text-base lg:text-lg font-semibold text-gray-500 whitespace-nowrap pl-2";
-        floorDiv.textContent = `Floor ${floor}`;
+        floorDiv.className = "floor";
+
+        const floorBtn = document.createElement("div");
+        floorBtn.style.background = "#000";
+        floorBtn.style.color = "#fff";
+        floorBtn.style.borderRadius = "50%";
+        floorBtn.style.width = `${rowHeight * 0.5}px`;
+        floorBtn.style.height = `${rowHeight * 0.5}px`;
+        floorBtn.style.display = "flex";
+        floorBtn.style.justifyContent = "center";
+        floorBtn.style.alignItems = "center";
+        floorBtn.style.fontWeight = "600";
+        floorBtn.style.fontSize = `${rowHeight * 0.2}px`;
+        floorBtn.textContent = floor; // GF stays GF, others as numbers
+
+        floorDiv.appendChild(floorBtn);
 
         // Divider
         const divider = document.createElement("div");
-        divider.className = "w-px h-12 sm:h-16 lg:h-20 bg-gradient-to-b from-transparent via-gray-300 to-transparent mx-auto";
+        divider.className = "divider-vertical";
+        divider.style.height = `${rowHeight * 0.7}px`;
 
-        // Logo container
+        // Logos
         const logoDiv = document.createElement("div");
-        logoDiv.className = "flex flex-wrap gap-2 sm:gap-3 lg:gap-4 justify-start";
+        logoDiv.className = "logo";
 
-        Object.keys(tenants).forEach(key => {
+        const tenantKeys = Object.keys(tenants);
+        const availableLogoWidth = document.querySelector('.directory').clientWidth - (12/100*document.querySelector('.directory').clientWidth) - 1.5/100*document.querySelector('.directory').clientWidth;
+
+        tenantKeys.forEach(key => {
           const img = document.createElement("img");
           img.src = tenants[key].logo || "https://via.placeholder.com/80";
           img.alt = tenants[key].name || "Tenant";
-          img.className = `
-            w-14 h-14 sm:w-20 sm:h-20 lg:w-24 lg:h-24
-            rounded-xl object-contain bg-gray-50 p-2
-            shadow-sm hover:scale-105 transition-transform
-          `;
+          img.style.height = `${rowHeight * 0.6}px`;
+          img.style.width = `${Math.min(rowHeight * 0.6, availableLogoWidth / tenantKeys.length)}px`;
           logoDiv.appendChild(img);
         });
 
         row.appendChild(floorDiv);
         row.appendChild(divider);
         row.appendChild(logoDiv);
-
         listContainer.appendChild(row);
       });
     });
