--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
     }
     .logo {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: flex-start;
       align-items: center;
       flex-wrap: wrap;
       gap: 0.5vh;
@@ -143,7 +143,7 @@
         row.style.height = `${rowHeight}px`;
         row.style.animationDelay = `${(i+1)*0.1}s`;
 
-        // Floor Button Container
+        // Floor Button
         const floorDiv = document.createElement("div");
         floorDiv.className = "floor";
 
@@ -158,7 +158,7 @@
         floorBtn.style.alignItems = "center";
         floorBtn.style.fontWeight = "600";
         floorBtn.style.fontSize = `${rowHeight * 0.2}px`;
-        floorBtn.textContent = floor; // GF stays GF, others as numbers
+        floorBtn.textContent = floor;
 
         floorDiv.appendChild(floorBtn);
 
@@ -172,14 +172,36 @@
         logoDiv.className = "logo";
 
         const tenantKeys = Object.keys(tenants);
-        const availableLogoWidth = document.querySelector('.directory').clientWidth - (12/100*document.querySelector('.directory').clientWidth) - 1.5/100*document.querySelector('.directory').clientWidth;
+        const tenantCount = tenantKeys.length;
+        const availableLogoWidth = document.querySelector('.directory').clientWidth 
+          - (12/100 * document.querySelector('.directory').clientWidth) 
+          - 1.5/100 * document.querySelector('.directory').clientWidth;
 
         tenantKeys.forEach(key => {
           const img = document.createElement("img");
           img.src = tenants[key].logo || "https://via.placeholder.com/80";
           img.alt = tenants[key].name || "Tenant";
-          img.style.height = `${rowHeight * 0.6}px`;
-          img.style.width = `${Math.min(rowHeight * 0.6, availableLogoWidth / tenantKeys.length)}px`;
+
+          // Base size depending on number of tenants
+          let maxH = rowHeight * 0.8;
+          if (tenantCount <= 2) {
+            maxH = rowHeight * 0.95;
+          } else if (tenantCount <= 4) {
+            maxH = rowHeight * 0.85;
+          }
+
+          // Width per tenant
+          let maxW = availableLogoWidth / tenantCount - 16;
+
+          // Minimum size (avoid tiny/pixelated logos on big screens)
+          const minSize = 64; // px (can be adjusted)
+          img.style.maxHeight = `${Math.max(maxH, minSize)}px`;
+          img.style.maxWidth  = `${Math.max(maxW, minSize)}px`;
+
+          // Keep aspect ratio
+          img.style.height = "auto";
+          img.style.width  = "auto";
+
           logoDiv.appendChild(img);
         });
 
