--- a/test.html
+++ b/test.html
@@ -35,11 +35,29 @@
     }
     .header {
       text-align: center;
-      padding: 1vh 0;
+      padding: 2vh 0;
       flex-shrink: 0;
     }
-    .header h1 { color: var(--accent); font-weight: 800; margin: 0; }
-    .header h2 { font-weight: 600; margin: 0; }
+    .header h1 {
+      color: var(--accent);
+      font-weight: 800;
+      margin: 0;
+      font-size: 2rem;
+      opacity: 0;
+      transform: scale(0.8);
+      animation: fadeZoom 1s forwards;
+      animation-delay: 0.2s;
+    }
+    .header h2 {
+      font-weight: 600;
+      margin: 0;
+      font-size: 1.5rem;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeSlideUp 1s forwards;
+      animation-delay: 1s;
+    }
+
     .list {
       display: flex;
       flex-direction: column-reverse;
@@ -49,18 +67,20 @@
     }
     .row {
       display: grid;
-      grid-template-columns: 12vw 1.5vw auto; /* floor | divider | logos */
-      align-items: center; /* aligns floor + divider + logos */
+      grid-template-columns: 12vw 1.5vw auto;
+      align-items: center;
       border-bottom: 1px solid var(--divider);
-      opacity: 0;
-      transform: translateY(4vh) scale(0.5);
-      animation: rowAnim 0.6s forwards;
       padding: 0 1vw;
       gap: 0.5vw;
+      opacity: 0;
+      transform: translateY(30px);
     }
+    .row.show {
+      animation: fadeSlideUp 0.8s forwards;
+    }
+
     .divider-vertical {
       width: 2px;
-      height: 70%; /* will scale dynamically in JS */
       justify-self: center;
       background: linear-gradient(to bottom, transparent, var(--divider), transparent);
     }
@@ -68,12 +88,17 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      opacity: 0;
+      transform: scale(0.5);
+    }
+    .floor.show {
+      animation: popIn 0.6s forwards;
     }
     .logo {
       display: flex;
       justify-content: flex-start;
-      align-items: center; /* vertical alignment with floor numbers */
-      flex-wrap: nowrap;   /* keep in one row */
+      align-items: center;
+      flex-wrap: nowrap;
       gap: 1vw;
       width: 100%;
     }
@@ -83,17 +108,30 @@
       background: #f9f9f9;
       padding: 6px;
       flex-shrink: 0;
+      opacity: 0;
+      transform: scale(0.5);
     }
-    @keyframes rowAnim {
-      to { opacity: 1; transform: translateY(0) scale(1); }
+    .logo img.show {
+      animation: popIn 0.6s forwards;
+    }
+
+    /* Animations */
+    @keyframes fadeZoom {
+      to { opacity: 1; transform: scale(1); }
+    }
+    @keyframes fadeSlideUp {
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes popIn {
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
 <body>
   <div class="directory">
     <div class="header">
-      <h1>Global Infocity Park</h1>
-      <h2>Block A</h2>
+      <h1 id="mainTitle">Global Infocity Park</h1>
+      <h2 id="subTitle">Block A</h2>
     </div>
     <div class="list" id="directoryView"></div>
   </div>
@@ -122,7 +160,6 @@
       listContainer.innerHTML = "";
       if (!data) return;
 
-      // Sort floors: GF first, then numbers ascending
       const floorKeys = Object.keys(data).sort((a,b)=>{
         if(a === "GF") return -1;
         if(b === "GF") return 1;
@@ -134,6 +171,8 @@
       const headerHeight = document.querySelector('.header').clientHeight;
       const rowHeight = (directoryHeight - headerHeight) / numFloors;
 
+      let globalDelay = 2; // start after headers are done
+
       floorKeys.forEach((floor, i) => {
         const tenants = data[floor]?.tenants;
         if (!tenants) return;
@@ -141,12 +180,9 @@
         const row = document.createElement("div");
         row.className = "row";
         row.style.height = `${rowHeight}px`;
-        row.style.animationDelay = `${(i+1)*0.1}s`;
 
-        // Floor Button
         const floorDiv = document.createElement("div");
         floorDiv.className = "floor";
-
         const floorBtn = document.createElement("div");
         floorBtn.style.background = "#000";
         floorBtn.style.color = "#fff";
@@ -159,15 +195,12 @@
         floorBtn.style.fontWeight = "600";
         floorBtn.style.fontSize = `${rowHeight * 0.2}px`;
         floorBtn.textContent = floor;
-
         floorDiv.appendChild(floorBtn);
 
-        // Divider
         const divider = document.createElement("div");
         divider.className = "divider-vertical";
         divider.style.height = `${rowHeight * 0.7}px`;
 
-        // Logos
         const logoDiv = document.createElement("div");
         logoDiv.className = "logo";
 
@@ -177,27 +210,24 @@
           - (12/100 * document.querySelector('.directory').clientWidth) 
           - 1.5/100 * document.querySelector('.directory').clientWidth;
 
-        tenantKeys.forEach(key => {
+        tenantKeys.forEach((key, idx) => {
           const img = document.createElement("img");
           img.src = tenants[key].logo || "https://via.placeholder.com/80";
           img.alt = tenants[key].name || "Tenant";
 
-          // Base size depending on number of tenants
           let maxH = rowHeight * 0.8;
-          if (tenantCount <= 2) {
-            maxH = rowHeight * 0.95;
-          } else if (tenantCount <= 4) {
-            maxH = rowHeight * 0.85;
-          }
+          if (tenantCount <= 2) maxH = rowHeight * 0.95;
+          else if (tenantCount <= 4) maxH = rowHeight * 0.85;
 
-          // Width per tenant
           let maxW = availableLogoWidth / tenantCount - 16;
-
-          // Minimum size
           const minSize = 64;
-          img.style.height = `${Math.max(maxH, minSize)}px`; // fixed height for alignment
-          img.style.maxWidth  = `${Math.max(maxW, minSize)}px`;
-          img.style.width  = "auto"; // keep aspect ratio
+
+          img.style.height = `${Math.max(maxH, minSize)}px`;
+          img.style.maxWidth = `${Math.max(maxW, minSize)}px`;
+          img.style.width = "auto";
+
+          // Animate each logo with stagger
+          setTimeout(() => img.classList.add("show"), (globalDelay + idx + 2) * 400);
 
           logoDiv.appendChild(img);
         });
@@ -206,6 +236,12 @@
         row.appendChild(divider);
         row.appendChild(logoDiv);
         listContainer.appendChild(row);
+
+        // Animate row and floor circle
+        setTimeout(() => row.classList.add("show"), globalDelay * 400);
+        setTimeout(() => floorDiv.classList.add("show"), (globalDelay + 1) * 400);
+
+        globalDelay += tenantKeys.length + 2; // push delay for next floor
       });
     });
   </script>
