--- a/test.html
+++ b/test.html
@@ -72,10 +72,10 @@
       padding: 0 1vw;
       gap: 0.5vw;
       opacity: 0;
-      transform: translateY(0);
+      transform: translateY(20px);
       height: auto;
     }
-    .row.show { animation: fadeSlideUp 0.8s forwards; }
+    .row.show { animation: fadeSlideUp 1s forwards; }
 
     .divider-vertical {
       width: 2px;
@@ -91,7 +91,7 @@
       transform: scale(0.5);
       flex-shrink: 0;
     }
-    .floor.show { animation: popIn 0.6s forwards; }
+    .floor.show { animation: popIn 0.8s forwards; }
 
     .logo {
       display: flex;
@@ -110,12 +110,16 @@
       opacity: 0;
       transform: scale(0.5);
     }
-    .logo img.show { animation: popIn 0.6s forwards; }
+    .logo img.show { animation: popIn 0.8s forwards; }
 
     /* Animations */
     @keyframes fadeZoom { to { opacity: 1; transform: scale(1); } }
     @keyframes fadeSlideUp { to { opacity: 1; transform: translateY(0); } }
-    @keyframes popIn { to { opacity: 1; transform: scale(1); } }
+    @keyframes popIn {
+      0% { opacity: 0; transform: scale(0.5); }
+      70% { opacity: 1; transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
     @keyframes fadeOut { to { opacity: 0; transform: scale(0.95); } }
   </style>
 </head>
@@ -178,8 +182,8 @@
       mainTitle.style.opacity = 0; mainTitle.style.transform = "scale(0.8)";
       subTitle.style.opacity = 0; subTitle.style.transform = "translateY(20px)";
 
-      setTimeout(() => { mainTitle.style.animation = "fadeZoom 1s forwards"; }, 200);
-      setTimeout(() => { subTitle.style.animation = "fadeSlideUp 1s forwards"; }, 1200);
+      setTimeout(() => { mainTitle.style.animation = "fadeZoom 1.2s forwards"; }, 200);
+      setTimeout(() => { subTitle.style.animation = "fadeSlideUp 1.2s forwards"; }, 1400);
 
       const floorKeys = Object.keys(directoryData).sort((a,b)=>{
         if(a==="GF") return -1;
@@ -244,8 +248,8 @@
 
           logoDiv.appendChild(img);
 
-          // Wave-style animation left-to-right
-          setTimeout(() => img.classList.add("show"), globalDelay + 400 + idx*200);
+          // Slower wave animation left-to-right with bounce
+          setTimeout(() => img.classList.add("show"), globalDelay + 600 + idx*400);
         });
 
         row.appendChild(floorDiv);
@@ -254,9 +258,9 @@
         listContainer.appendChild(row);
 
         setTimeout(()=>row.classList.add("show"), globalDelay);
-        setTimeout(()=>floorDiv.classList.add("show"), globalDelay+400);
+        setTimeout(()=>floorDiv.classList.add("show"), globalDelay+600);
 
-        globalDelay += (tenantKeys.length+2)*400;
+        globalDelay += (tenantKeys.length+2)*400; // slower global delay
       });
     }
   </script>
